force-app/main/default/objects/Engagement_Account__c/Engagement_Account__c.object-meta.xml
<CustomObject>
    <label>Engagement Account</label>
    <pluralLabel>Engagement Accounts</pluralLabel>
    <nameField>
        <label>Engagement Account Name</label>
        <type>AutoNumber</type>
        <displayFormat>EA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object linking an Engagement to its related Accounts ("customers").</description>
</CustomObject>