force-app/main/default/objects/Engagement_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Engagement_Accounts</relationshipName>
    <relationshipLabel>Engagement Accounts</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>