force-app/main/default/objects/Engagement_Account__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <type>MasterDetail</type>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>Engagement_Accounts</relationshipName>
    <relationshipLabel>Engagement Accounts</relationshipLabel>
</CustomField>